# opengl-fun

./: .gitignore  CMakeLists.txt  README
project/src/: main.cpp  plain.frag
